update: design of API
