# openapi/specification.yml
@@ -9,7 +9,6 @@ tags:
 - name: "user"
   description: "Operations about user"
 schemes:
-- "https"
 - "http"
 paths:
   /url:
@@ -24,27 +23,33 @@ paths:
       produces:
       - "application/json"
       parameters:
+      - name: "api_key"
+        in: "header"
+        description: "api key for generating short url"
+        required: true
+        type: "string"
       - in: "body"
         name: "body"
         description: ""
-        schema:
-          $ref: "#/definitions/Url"
         required: true
+        schema:
+          $ref: "#/definitions/CreateUrlObj"
       responses:
         "200":
-          description: "Returns a string of fixed length."
-      security:
-      - api_key: []
+          description: "Return short url"
+          schema:
+            $ref: "#/definitions/ShortUrlObj"
+        "400":
+          description: "Invalid input syntax"
       x-swagger-router-controller: "shorturl.web.controllers.urls_controller"
   /url/{shorturl}:
     get:
       tags:
       - "url"
       summary: "Redirects to long url."
-      description: "Redirects to long url."
+      description: ""
       operationId: "redirect_url"
       produces:
-      - "application/xml"
       - "application/json"
       parameters:
       - name: "shorturl"
@@ -53,8 +58,8 @@ paths:
         required: true
         type: "string"
       responses:
-        "200":
-          description: "Redirects to original url."
+        "308":
+          description: "Redirection successful."
         "404":
           description: "shorturl not found"
       x-swagger-router-controller: "shorturl.web.controllers.urls_controller"
@@ -63,114 +68,38 @@ paths:
       tags:
       - "user"
       summary: "Create user"
-      description: "This can only be done by the logged in user."
+      description: ""
       operationId: "create_user"
       produces:
-      - "application/xml"
       - "application/json"
       parameters:
       - in: "body"
         name: "body"
-        description: "Created user object"
+        description: "User object for creating new user."
         required: true
         schema:
           $ref: "#/definitions/User"
       responses:
-        200:
-          description: "successful operation"
-      x-swagger-router-controller: "shorturl.web.controllers.users_controller"
-      
-  /user/login:
-    post:
-      tags:
-      - "user"
-      summary: "Logs user into the system"
-      description: ""
-      operationId: "login_user"
-      produces:
-      - "application/xml"
-      - "application/json"
-      parameters:
-      - in: "body"
-        name: "body"
-        description: "Login user"
-        required: true
-        schema:
-          $ref: "#/definitions/Login"
-      responses:
         "200":
-          description: "successful operation"
+          description: "Return api key"
           schema:
-            type: "string"
-          headers:
-            X-Rate-Limit:
-              type: "integer"
-              format: "int32"
-              description: "calls per hour allowed by the user"
-            X-Expires-After:
-              type: "string"
-              format: "date-time"
-              description: "date in UTC when token expires"
-        "400":
-          description: "Invalid username/password supplied"
+            $ref: "#/definitions/ApiKeyObj"
+        "406":
+          description: "User name already exists"
       x-swagger-router-controller: "shorturl.web.controllers.users_controller"
-      
-  /user/logout:
-    get:
-      tags:
-      - "user"
-      summary: "Logs out current logged in user session"
-      description: "This can only be done by the logged in user."
-      operationId: "logout_user"
-      produces:
-      - "application/xml"
-      - "application/json"
-      parameters: []
-      responses:
-        default:
-          description: "successful operation"
-      x-swagger-router-controller: "shorturl.web.controllers.users_controller"
-      
   /user/{username}:
-    get:
-      tags:
-      - "user"
-      summary: "Get user by user name"
-      description: "This can only be done by the logged in user."
-      operationId: "get_user_by_name"
-      produces:
-      - "application/xml"
-      - "application/json"
-      parameters:
-      - name: "username"
-        in: "path"
-        description: "The name that needs to be fetched. Use user1 for testing. "
-        required: true
-        type: "string"
-      responses:
-        "200":
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/UserData"
-        "400":
-          description: "Invalid username supplied"
-        "404":
-          description: "User not found"
-      x-swagger-router-controller: "shorturl.web.controllers.users_controller"
-      
     put:
       tags:
       - "user"
       summary: "Update user"
-      description: "This can only be done by the logged in user."
+      description: ""
       operationId: "update_user"
       produces:
-      - "application/xml"
       - "application/json"
       parameters:
       - name: "username"
         in: "path"
-        description: "name that need to be updated"
+        description: ""
         required: true
         type: "string"
       - in: "body"
@@ -178,7 +107,7 @@ paths:
         description: "Updated user object"
         required: true
         schema:
-          $ref: "#/definitions/UpdateUser"
+          $ref: "#/definitions/UpdatedUser"
       responses:
         "200":
           description: "Password updated successfully"
@@ -187,38 +116,14 @@ paths:
         "404":
           description: "User not found"
       x-swagger-router-controller: "shorturl.web.controllers.users_controller"
-      
-    delete:
-      tags:
-      - "user"
-      summary: "Delete user"
-      description: "This can only be done by the logged in user."
-      operationId: "delete_user"
-      produces:
-      - "application/xml"
-      - "application/json"
-      parameters:
-      - name: "username"
-        in: "path"
-        description: "The name that needs to be deleted"
-        required: true
-        type: "string"
-      responses:
-        "400":
-          description: "Invalid username supplied"
-        "404":
-          description: "User not found"
-      x-swagger-router-controller: "shorturl.web.controllers.users_controller"
-          
   /user/key/{username}:
     get:
       tags:
-        - "user"
+      - "user"
       summary: "Get key by user name"
-      description: "This can only be done by the logged in user."
-      operationId: "get_key_by_name"
+      description: ""
+      operationId: "get_key"
       produces:
-      - "application/xml"
       - "application/json"
       parameters:
       - name: "username"
@@ -226,123 +131,58 @@ paths:
         description: "The username for which key is to be fetched."
         required: true
         type: "string"
+      - name: "password"
+        in: "header"
+        description: ""
+        required: true
+        type: "string"
       responses:
         "200":
           description: "successful operation"
           schema:
-            $ref: "#/definitions/Key"
+            $ref: "#/definitions/ApiKeyObj"
         "400":
           description: "Invalid username supplied"
         "404":
           description: "User not found"
       x-swagger-router-controller: "shorturl.web.controllers.users_controller"
-      
     put:
       tags:
       - "user"
       summary: "Update key by user name"
-      description: "This can only be done by the logged in user."
-      operationId: "update_key_by_name"
+      description: ""
+      operationId: "update_key"
       produces:
-      - "application/xml"
       - "application/json"
       parameters:
       - name: "username"
         in: "path"
-        description: "The username for which is key is to be updated."
+        description: "The username for which api key is to be updated."
+        required: true
+        type: "string"
+      - name: "password"
+        in: "header"
+        description: ""
         required: true
         type: "string"
       - in: "body"
         name: "body"
-        description: "Updated key object"
+        description: "Updated api key object"
         required: true
         schema:
-          $ref: "#/definitions/Key"
+          $ref: "#/definitions/ApiKeyObj"
       responses:
+        "200":
+          description: "Successfully updated"
         "400":
-          description: "Invalid user supplied"
+          description: "Invalid user name or password supplied"
         "404":
           description: "User not found"
       x-swagger-router-controller: "shorturl.web.controllers.users_controller"
-      
-    delete:
-      tags:
-      - "user"
-      summary: "Delete key by the user name"
-      description: "This can only be done by the logged in user."
-      operationId: "delete_key_by_name"
-      produces:
-      - "application/xml"
-      - "application/json"
-      parameters:
-      - name: "username"
-        in: "path"
-        description: "The username for which key is to be deleted"
-        required: true
-        type: "string"
-      responses:
-        "400":
-          description: "Invalid username supplied"
-        "404":
-          description: "User not found"
-      x-swagger-router-controller: "shorturl.web.controllers.users_controller"
-          
-securityDefinitions:
-  api_key:
-    type: "apiKey"
-    name: "api_key"
-    in: "header"
 definitions:
-  Key:
+  CreateUrlObj:
     type: "object"
     required:
-    - "key"
-    properties:
-      key:
-        type: "string"
-  User:
-    type: "object"
-    required:
-    - "username"
-    - "email"
-    - "password"
-    properties:
-      username:
-        type: "string"
-      email:
-        type: "string"
-      password:
-        type: "string"
-  Login:
-    type: "object"
-    required:
-    - "username"
-    - "password"
-    properties:
-      username:
-        type: "string"
-      password:
-        type: "string"
-  UserData:
-    type: "object"
-    required:
-    - "username"
-    - "email"
-    properties:
-      username:
-        type: "string"
-      email:
-        type: "string"
-  UpdateUser:
-    type: "object"
-    required:
-      - "password"
-    properties:
-      password:
-        type: "string"
-  Url:
-    type: "object"
-    required: 
     - "long_url"
     properties:
       long_url:
@@ -352,4 +192,47 @@ definitions:
       custom_alias:
         type: "string"
       time_to_live:
+        type: "string"
+    example:
+      time_to_live: "time_to_live"
+      custom_alias: "custom_alias"
+      long_url: "long_url"
+      username: "username"
+  ShortUrlObj:
+    type: "object"
+    required:
+    - "short_url"
+    properties:
+      short_url:
+        type: "string"
+    example:
+      short_url: "short_url"
+  ApiKeyObj:
+    type: "object"
+    required:
+    - "api_key"
+    properties:
+      api_key:
+        type: "string"
+    example:
+      api_key: "api_key"
+  User:
+    type: "object"
+    required:
+    - "email"
+    - "password"
+    - "username"
+    properties:
+      username:
+        type: "string"
+      email:
+        type: "string"
+      password:
+        type: "string"
+  UpdatedUser:
+    type: "object"
+    required:
+    - "password"
+    properties:
+      password:
         type: "string"
